...
            gapBox,
            Container(
              width: 100,
              height: 40,
              decoration: largeRadiusRoundedBox,
              child: TextButton(
                key: _displayDone ? const Key('CountdownDoneButton') : const Key('CountdownCancelButton'),
                child: AutoSizeText(_displayDone ? 'Done' : 'Cancel', maxLines: 1),
                style: TextButton.styleFrom(
                  padding: const EdgeInsets.all(5.0),
                  primary: Colors.white,
                  textStyle: chewyTextStyle.copyWith(fontSize: 20.0),
                ),
...
