...
            children: <Widget> [
              gapBox,
              gapBox,
              Form(
                key: _formKey,
                child: TextFormField(
                  key: const Key('ModuleFormField'),
                  decoration: formFieldDeco.copyWith(hintText: 'Module', hintStyle: const TextStyle(color: whiteOpacity70)),
                  style: chewyTextStyle.copyWith(fontSize: 18.0),
                  validator: (value) => value!.trim().isEmpty ? 'Enter a module' : null,
                  controller: _fieldText,
                  onChanged: (value) {
                    setState(() => _module = value.trim());
...
              gapBox,
              Container(
                width: 100,
                height: 40,
                decoration: largeRadiusRoundedBox,
                child: TextButton(
                  key: const Key('AddModuleButton'),
                  child: const AutoSizeText('Add', maxLines: 1),
                  style: TextButton.styleFrom(
                    padding: const EdgeInsets.all(5.0),
                    primary: Colors.white,
                    textStyle: chewyTextStyle.copyWith(fontSize: 20.0),
                  ),
...
